--- a/github.html
+++ b/github.html
@@ -9,12 +9,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/github-styles.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-
+    <link rel="stylesheet" href="/assests/css/style.css" type="text/css" />
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assests/js/github-information.js"></script>
 </head>
 
+<body>
+
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
     <header class="container-fluid">
         <div class="row">
@@ -62,8 +66,8 @@
 
             <div class="center-form">
                 <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubInformation()">
-                <div id="gh-user-data" class="clearfix"></div>
-                <div id="gh-repo-data" class="clearfix"></div>
+                <div id="gh-user-data"</div>
+                <div id="gh-repo-data"</div>
             </div>
         </div>
     </section>
